<resources>
    <string name="app_name">Factor Launcher</string>
    <string name="add_to_home">Add to home</string>
    <string name="edit">Edit</string>
    <string name="info">Info</string>
    <string name="uninstall">Uninstall</string>
    <string name="remove_from_home">Remove from home</string>
    <string name="resize">Resize</string>
    <string name="_1_x_1">1 x 1</string>
    <string name="_2_x_1">2 x 1</string>
    <string name="_2_x_2">2 x 2</string>
    <string name="rename">Rename</string>
    <string name="hide">Hide</string>
    <string name="hidden_apps">Hidden apps</string>
    <string name="options">Options</string>
    <string name="no_shortcuts_available_for_this_app">No shortcuts available for this app</string>
    <string name="welcome">Welcome</string>
    <string name="blur_effect">Blur effect</string>
    <string name="blur_effect_performance_warning">
        Note that blur effect may cause some devices to lag. If your device is having performance issues, you can always
        turn this off in the settings.
    </string>
    <string name="would_you_like_to_turn_on_blur_effect">Would you like to turn on blur effect?</string>
    <string name="turn_on_blur">Turn on blur</string>
    <string name="skip">Skip</string>
    <string name="permission_granted">Permission granted</string>
    <string name="next">Next</string>
    <string name="demo_notification_title">New notification</string>
    <string name="demo_notification_content">Notification from Factor Launcher</string>
    <string name="demo_notification_counter">1</string>
    <string name="notification_service">Notification Service</string>
    <string name="notification_service_rationale">To display
        notification count and message, you need to enable Factor notification service.
    </string>
    <string name="enable">Enable</string>
    <string name="blur_effect_live_wallpaper_warning">Currently blur effect does not work with live wallpapers.</string>
    <string name="notification_service_description">show notification message and count</string>
    <string name="you_are_all_set">You are all set</string>
    <string name="enabled">Enabled</string>
    <string name="change_wallpaper">Change wallpaper</string>
    <string name="use_dark_text">Use dark text on tiles</string>
    <string name="show_shadow_under_tile_icons">Show shadow under tile icons</string>
    <string name="use_dark_icon">Use dark icons on the search bar</string>
    <string name="search">Search</string>
    <string name="blur_radius">Blur radius</string>
    <string name="tile_corner_radius">Tile and search bar corner radius</string>
    <string name="storage_permission">Storage permission</string>
    <string name="notification_access">Notification access</string>
    <string name="request">Request</string>
    <string name="default_launcher">Set as default launcher</string>
    <string name="tile_color">Tile color value</string>
    <string name="choose">Palette</string>
    <string name="search_bar_color">Search bar color value</string>
    <string name="color_value_hint">FFFFFF</string>
    <string name="granted">Granted</string>
    <string name="blur_effect_missing_permission">Requires storage access</string>
    <string name="storage_permission_rationale">Factor launcher needs to access your external storage</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="select_wallpaper">Select Wallpaper</string>
    <string name="crash_text">Sorry, the application has crashed. Please send the crash report to the developer.
    </string>
    <string name="crash_report">Crash Report</string>
    <string name="channel_name">factor_launcher_crash_report_channel</string>
    <string name="home_screen_width">Tile list width (% of home screen)</string>
    <string name="tile_margin">Tile padding</string>
    <string name="arrow">arrow</string>
    <string name="finish_setup">finish setup</string>
    <string name="welcome_background_scroller_description">parallel background effect controller</string>
    <string name="to_next_page">to next page</string>
    <string name="cancel_app_edit">cancel app edit</string>
    <string name="reset_app_edit">reset app edit</string>
    <string name="confirm_app_edit">confirm app edit</string>
    <string name="home_screen">home screen</string>
    <string name="recently_used_apps">recently used apps</string>
    <string name="use_static_blur_for_better_performance">Blur wallpaper instead of tiles on the home screen (for better performance)</string>
    <string name="no_icon_pack">No Icon Pack</string>
    <string name="icon_packs">Icon Packs</string>
</resources>