<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="binding" type="com.factor.launcher.fragments.SettingsFragment"/>
    </data>

    <!--root layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!--demo-->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/demo_space"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="20dp">

            <!--demo background-->
            <androidx.cardview.widget.CardView
                    android:id="@+id/demo_background"
                    android:translationZ="-50dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    app:cardCornerRadius="5dp">

                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/city_welcome_background"
                        android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <!--demo tile (wide)-->
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="320dp"
                    android:layout_height="160dp"
                    android:layout_marginVertical="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <!--background-->
                <androidx.cardview.widget.CardView
                        android:id="@+id/demo_card"
                        android:translationZ="-20dp"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <eightbitlab.com.blurview.BlurView
                            android:id="@+id/demo_blur"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                </androidx.cardview.widget.CardView>

                <!--base-->
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:translationZ="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <!--app label-->
                    <androidx.appcompat.widget.AppCompatTextView
                            android:text="@string/app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:singleLine="true"
                            android:ellipsize="end"
                            android:maxWidth="120dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="10dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="40dp"/>

                    <!--app icon-->
                    <com.qhutch.elevationimageview.ElevationImageView
                            android:id="@+id/tileIcon"
                            android:src="@mipmap/factor_icon_round"
                            android:layout_height="70dp"
                            android:layout_width="70dp"
                            android:gravity="center"
                            android:padding="10dp"
                            android:elevation="50dp"
                            android:scaleType="fitCenter"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                            app:layout_constraintBottom_toBottomOf="parent"/>


                    <!--guidelines-->
                    <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/guideline_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent=".5"/>
                    <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/guideline_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.50"/>
                    <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/guideline_horizontal_bottom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.80"/>


                    <!--notification title-->
                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/notification_title"
                            android:text= "@string/demo_notification_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="2dp"
                            android:layout_marginHorizontal="20dp"
                            android:textColor="#000000"
                            android:singleLine="true"
                            android:ellipsize="end"
                            android:scrollHorizontally="false"
                            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal"
                            app:layout_constraintStart_toEndOf="@id/tileIcon"
                            app:layout_constraintEnd_toEndOf="parent"/>

                    <!--notification content-->
                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/notification_content"
                            android:layout_width="0dp"
                            android:text="@string/demo_notification_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="5dp"
                            android:textColor="#000000"
                            android:lines="1"
                            android:maxLines="2"
                            android:ellipsize="end"
                            app:layout_constraintTop_toBottomOf="@id/notification_title"
                            app:layout_constraintStart_toEndOf="@id/tileIcon"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_bottom"/>


                    <!--notification count-->
                    <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/notification_count"
                            android:background="@drawable/round_button"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:text="@string/demo_notification_counter"
                            android:textAlignment="gravity"
                            android:layout_marginVertical="10dp"
                            android:layout_marginEnd="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--app settings-->
        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/demo_space">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                        android:text="@string/blur_effect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
                <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/blur_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

